hphp/hack/test/typecheck/expression_trees/invalid_operator.php.exp
File "invalid_operator.php", line 13, characters 13-21:
Unsupported expression tree syntax. (Parsing[1002])
File "invalid_operator.php", line 16, characters 13-20:
Unsupported expression tree syntax. (Parsing[1002])
File "invalid_operator.php", line 19, characters 13-36:
Unsupported expression tree syntax. (Parsing[1002])
File "invalid_operator.php", line 22, characters 22-39:
Expression trees do not support this statement syntax. (Parsing[1002])
File "invalid_operator.php", line 23, characters 37-61:
Expression trees do not support this statement syntax. (Parsing[1002])
File "invalid_operator.php", line 26, characters 25-26:
Expression trees do not support parameters with default values. (Parsing[1002])
File "invalid_operator.php", line 29, characters 32-36:
Unsupported expression tree syntax. (Parsing[1002])
File "invalid_operator.php", line 30, characters 32-38:
Unsupported expression tree syntax. (Parsing[1002])
File "invalid_operator.php", line 33, characters 28-34:
Expression trees do not support compound assignments. Try the long form style `$foo = $foo + $bar` instead. (Parsing[1002])
